# deep_learning_mit_course

./: .gitignore  README.md  pyproject.toml
app/: atari.py  main.py  net.py
app/data/ALE/: SpaceInvaders-v5.chkpt
